修改网页标题

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   
 
-  <title>纯CSS3实现圆盘时钟动画素材</title>
+  <title>时钟</title>
 
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css">
 
